# mamabear-app

./: CMakeLists.txt  MainView.qml  MqttSubscriber.cpp  MqttSubscriber.h  README  README.md  SensorData.qml  Triangle.qml  main.cpp  main.qml
